UI for login/register + linking between them

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,133 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFDFD"
+    android:rotationX="0"
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/LoginTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="99dp"
+        android:layout_marginTop="95dp"
+        android:layout_marginEnd="99dp"
+        android:fontFamily="@font/inter"
+        android:text="Bine ai revenit!"
+        android:textAlignment="center"
+        android:textSize="32sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/LoginSubtitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/LoginSubtitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="137dp"
+        android:layout_marginEnd="138dp"
+        android:fontFamily="@font/inter"
+        android:text="Login pentru a continua"
+        android:textColor="#8E8A8A"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@+id/LoginUserInput"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/LoginTitle" />
+
+    <EditText
+        android:id="@+id/LoginUserInput"
+        style="@style/Widget.AppCompat.AutoCompleteTextView"
+        android:layout_width="330dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="89dp"
+        android:layout_marginEnd="41dp"
+        android:background="#D9D9D9"
+        android:ems="10"
+        android:paddingStart="10dp"
+        android:fontFamily="@font/inter"
+        android:hint="Utilizator"
+        android:inputType="text"
+        android:textColor="#000000"
+        android:textColorHint="#8E8A8A"
+        app:layout_constraintBottom_toTopOf="@+id/LoginPasswordInput"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/LoginSubtitle" />
+
+    <EditText
+        android:id="@+id/LoginPasswordInput"
+        android:layout_width="330dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="55dp"
+        android:layout_marginEnd="30dp"
+        android:background="#D9D9D9"
+        android:paddingStart="10dp"
+        android:ems="10"
+        android:fontFamily="@font/inter"
+        android:hint="Parola"
+        android:inputType="textPassword"
+        android:textColor="#000000"
+        android:textColorHint="#8E8A8A"
+        app:layout_constraintBottom_toTopOf="@+id/LoginButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.476"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/LoginUserInput" />
+
+    <Button
+        android:id="@+id/LoginButton"
+        android:layout_width="330dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="53dp"
+        android:layout_marginEnd="41dp"
+        android:layout_marginBottom="224dp"
+        android:fontFamily="@font/inter"
+        android:text="Login"
+        android:backgroundTint="#F18C42"
+        android:textColor="#000000"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/LoginPasswordInput" />
+
+    <TextView
+        android:id="@+id/LoginInfo1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="95dp"
+        android:layout_marginTop="105dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="87dp"
+        android:fontFamily="@font/inter"
+        android:text="Nu ai cont?"
+        android:textColor="#8E8A8A"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/LinkToRegister"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/LoginButton" />
+
+    <TextView
+        android:id="@+id/LinkToRegister"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="105dp"
+        android:layout_marginEnd="70dp"
+        android:layout_marginBottom="87dp"
+        android:clickable="true"
+        android:fontFamily="@font/inter"
+        android:text="Inregistreaza-te aici"
+        android:textColor="#F18C42"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/LoginInfo1"
+        app:layout_constraintTop_toBottomOf="@+id/LoginButton" />
 </androidx.constraintlayout.widget.ConstraintLayout>
