--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#FFFDFD"
     android:rotationX="0"
-    tools:context=".MainActivity">
+    tools:context=".LoginActivity">
 
     <TextView
         android:id="@+id/LoginTitle"
@@ -48,9 +48,8 @@
         android:layout_marginStart="40dp"
         android:layout_marginTop="89dp"
         android:layout_marginEnd="41dp"
-        android:background="#D9D9D9"
         android:ems="10"
-        android:paddingStart="10dp"
+        android:paddingStart="15dp"
         android:fontFamily="@font/inter"
         android:hint="Utilizator"
         android:inputType="text"
@@ -59,21 +58,22 @@
         app:layout_constraintBottom_toTopOf="@+id/LoginPasswordInput"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LoginSubtitle" />
+        app:layout_constraintTop_toBottomOf="@+id/LoginSubtitle"
+        android:background="@drawable/input_shape"/>
 
     <EditText
         android:id="@+id/LoginPasswordInput"
         android:layout_width="330dp"
         android:layout_height="48dp"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="55dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="30dp"
-        android:background="#D9D9D9"
-        android:paddingStart="10dp"
+        android:background="@drawable/input_shape"
         android:ems="10"
         android:fontFamily="@font/inter"
         android:hint="Parola"
         android:inputType="textPassword"
+        android:paddingStart="15dp"
         android:textColor="#000000"
         android:textColorHint="#8E8A8A"
         app:layout_constraintBottom_toTopOf="@+id/LoginButton"
