--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -14,10 +14,9 @@
         android:layout_marginStart="40dp"
         android:layout_marginEnd="41dp"
         android:layout_marginBottom="79dp"
-        android:background="#D9D9D9"
         android:ems="10"
         android:fontFamily="@font/inter"
-        android:paddingStart="10dp"
+        android:paddingStart="15dp"
         android:hint="Repeta parola"
         android:inputType="textPassword"
         android:textColor="#000000"
@@ -27,7 +26,8 @@
         app:layout_constraintBottom_toTopOf="@+id/RegisterButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/RegisterPasswordInput" />
+        app:layout_constraintTop_toBottomOf="@+id/RegisterPasswordInput"
+        android:background="@drawable/input_shape"/>
 
     <EditText
         android:id="@+id/RegisterUserInput"
@@ -36,9 +36,8 @@
         android:layout_marginStart="40dp"
         android:layout_marginEnd="41dp"
         android:layout_marginBottom="27dp"
-        android:background="#D9D9D9"
         android:ems="10"
-        android:paddingStart="10dp"
+        android:paddingStart="15dp"
         android:fontFamily="@font/inter"
         android:hint="Utilizator"
         android:inputType="text"
@@ -49,14 +48,14 @@
         app:layout_constraintBottom_toTopOf="@+id/RegisterEmailInput"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/RegisterTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/RegisterTitle"
+        android:background="@drawable/input_shape"/>
 
     <Button
         android:id="@+id/RegisterButton"
         android:layout_width="330dp"
         android:layout_height="70dp"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="53dp"
         android:layout_marginEnd="41dp"
         android:layout_marginBottom="96dp"
         android:backgroundTint="#F18C42"
@@ -67,7 +66,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/registerRepeatPasswordInput" />
 
     <TextView
         android:id="@+id/RegisterTitle"
@@ -94,20 +94,20 @@
         android:layout_marginStart="40dp"
         android:layout_marginEnd="41dp"
         android:layout_marginBottom="27dp"
-        android:background="#D9D9D9"
         android:ems="10"
         android:fontFamily="@font/inter"
         android:hint="Parola"
         android:inputType="textPassword"
         android:textColor="#000000"
         android:textColorHint="#8E8A8A"
-        android:paddingStart="10dp"
+        android:paddingStart="15dp"
         android:textSize="18sp"
         android:textStyle="normal"
         app:layout_constraintBottom_toTopOf="@+id/registerRepeatPasswordInput"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/RegisterEmailInput" />
+        app:layout_constraintTop_toBottomOf="@+id/RegisterEmailInput"
+        android:background="@drawable/input_shape"/>
 
     <EditText
         android:id="@+id/RegisterEmailInput"
@@ -116,8 +116,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginEnd="41dp"
         android:layout_marginBottom="27dp"
-        android:paddingStart="10dp"
-        android:background="#D9D9D9"
+        android:paddingStart="15dp"
         android:ems="10"
         android:fontFamily="@font/inter"
         android:hint="Email"
@@ -129,7 +128,8 @@
         app:layout_constraintBottom_toTopOf="@+id/RegisterPasswordInput"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/RegisterUserInput" />
+        app:layout_constraintTop_toBottomOf="@+id/RegisterUserInput"
+        android:background="@drawable/input_shape"/>
 
     <ImageButton
         android:id="@+id/BackToLoginButton"
