--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -10,7 +10,7 @@
         android:id="@+id/saveButton"
         android:layout_width="330dp"
         android:layout_height="70dp"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="35dp"
         android:layout_marginEnd="41dp"
         android:layout_marginBottom="156dp"
         android:backgroundTint="#F18C42"
@@ -28,7 +28,7 @@
         android:id="@+id/repeatNewPasswordInput"
         android:layout_width="330sp"
         android:layout_height="48sp"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="35dp"
         android:layout_marginEnd="41dp"
         android:layout_marginBottom="77dp"
         android:background="@drawable/input_shape"
@@ -51,7 +51,7 @@
         android:id="@+id/newPasswordInput"
         android:layout_width="330sp"
         android:layout_height="48sp"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="35dp"
         android:layout_marginEnd="41dp"
         android:layout_marginBottom="30dp"
         android:background="@drawable/input_shape"
@@ -74,7 +74,7 @@
         android:id="@+id/oldPasswordInput"
         android:layout_width="330sp"
         android:layout_height="48sp"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="35dp"
         android:layout_marginTop="69dp"
         android:layout_marginEnd="41dp"
         android:layout_marginBottom="30dp"
@@ -126,5 +126,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/icons8_left_50" />
+        app:srcCompat="@drawable/arrow" />
 </androidx.constraintlayout.widget.ConstraintLayout>
