--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -5,5 +5,6 @@
         <domain includeSubdomains="true">http://10.0.2.2:8000/api/register</domain>
         <domain includeSubdomains="true">http://10.0.2.2:8000/api/login</domain>
         <domain includeSubdomains="true">http://10.0.2.2:8000/api/reset-password</domain>
+        <domain includeSubdomains="true">http://10.0.2.2:8000/api/history</domain>
     </domain-config>
 </network-security-config>
