--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -16,7 +16,6 @@
         android:layout_marginEnd="345dp"
         android:layout_marginBottom="156dp"
         android:background="#F18C42"
-        app:layout_constraintBottom_toTopOf="@+id/oldPasswordInput"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -40,4 +39,26 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="590dp"
+        android:layout_marginTop="51dp"
+        android:background="@drawable/white_design_shape"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/HistoryTitle">
+
+        <TextView
+            android:id="@+id/numberQuizesText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="30dp"
+            android:fontFamily="@font/inter"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+    </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
