--- a/app/src/main/res/layout/activity_other_countries_info.xml
+++ b/app/src/main/res/layout/activity_other_countries_info.xml
@@ -20,7 +20,29 @@
             android:id="@+id/otherCountriesScrollableContainer"
             android:layout_width="match_parent"
             android:layout_height="600dp"
-            android:background="@drawable/white_design_shape"/>
+            android:background="@drawable/white_design_shape">
+
+            <Spinner
+                android:id="@+id/spinnerCountries"
+                android:layout_width="300dp"
+                android:layout_height="50dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerInParent="true"
+                android:layout_marginTop="30dp"
+                android:background="#D9D9D9" />
+
+            <TextView
+                android:id="@+id/countryInfoText"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerInParent="true"
+                android:layout_marginTop="120dp"
+                android:fontFamily="@font/inter"
+                android:text=""
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </RelativeLayout>
     </ScrollView>
 
     <TextView
