--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -8,52 +8,116 @@
 
     <Button
         android:id="@+id/next_question"
-        android:layout_width="286dp"
-        android:layout_height="97dp"
-        android:layout_marginBottom="64dp"
-        android:text="Next Question"
+        android:layout_width="341dp"
+        android:layout_height="63dp"
+        android:layout_marginBottom="40dp"
+        android:backgroundTint="#F18C42"
+        android:fontFamily="@font/inter"
+        android:text="Urmatoarea intrebare"
+        android:textColor="#000000"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/answer4" />
 
     <TextView
-        android:id="@+id/user_name"
-        android:layout_width="195dp"
+        android:id="@+id/timer"
+        android:layout_width="193dp"
         android:layout_height="31dp"
         android:layout_marginStart="108dp"
-        android:layout_marginTop="48dp"
-        android:text="user_placeholder"
+        android:layout_marginTop="27dp"
+        android:layout_marginEnd="110dp"
+        android:text="time_placeholder"
         android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/timer"
-        android:layout_width="182dp"
-        android:layout_height="33dp"
-        android:layout_marginStart="108dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="121dp"
-        android:text="time_placeholder"
-        android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/user_name" />
-
-    <TextView
         android:id="@+id/question"
-        android:layout_width="292dp"
-        android:layout_height="132dp"
+        android:layout_width="306dp"
+        android:layout_height="103dp"
         android:layout_marginStart="130dp"
-        android:layout_marginTop="80dp"
         android:layout_marginEnd="130dp"
+        android:layout_marginBottom="42dp"
         android:text="question_placeholder"
         android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@+id/answer1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.482"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/timer" />
+        app:layout_constraintTop_toBottomOf="@+id/question_counter" />
+
+    <TextView
+        android:id="@+id/question_counter"
+        android:layout_width="86dp"
+        android:layout_height="26dp"
+        android:layout_marginStart="162dp"
+        android:layout_marginEnd="163dp"
+        android:layout_marginBottom="45dp"
+        android:fontFamily="@font/inter"
+        android:text="question_counter"
+        android:textAlignment="center"
+        android:textColor="#80000000"
+        android:textSize="8sp"
+        app:layout_constraintBottom_toTopOf="@+id/question"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/timer"
+        tools:text="placeholder" />
+
+    <CheckBox
+        android:id="@+id/answer1"
+        android:layout_width="305dp"
+        android:layout_height="53dp"
+        android:layout_marginStart="53dp"
+        android:layout_marginEnd="53dp"
+        android:layout_marginBottom="20dp"
+        android:text="CheckBox"
+        app:layout_constraintBottom_toTopOf="@+id/answer2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/question"
+        app:layout_constraintVertical_bias="0.976" />
+
+    <CheckBox
+        android:id="@+id/answer2"
+        android:layout_width="305dp"
+        android:layout_height="53dp"
+        android:layout_marginStart="54dp"
+        android:layout_marginEnd="52dp"
+        android:layout_marginBottom="20dp"
+        android:text="CheckBox"
+        app:layout_constraintBottom_toTopOf="@+id/answer3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/answer1" />
+
+    <CheckBox
+        android:id="@+id/answer3"
+        android:layout_width="305dp"
+        android:layout_height="53dp"
+        android:layout_marginStart="54dp"
+        android:layout_marginEnd="52dp"
+        android:layout_marginBottom="20dp"
+        android:text="CheckBox"
+        app:layout_constraintBottom_toTopOf="@+id/answer4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/answer2" />
+
+    <CheckBox
+        android:id="@+id/answer4"
+        android:layout_width="305dp"
+        android:layout_height="53dp"
+        android:layout_marginStart="54dp"
+        android:layout_marginEnd="52dp"
+        android:layout_marginBottom="80dp"
+        android:text="CheckBox"
+        app:layout_constraintBottom_toTopOf="@+id/next_question"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/answer3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
